# 367

./: .gitignore  C:\Users\mathe\.vscode\study\FIAP\RedesNeurais\s2\aula\imageRN.ipynb  T2_MATIAS_3.ipynb  \FIAP\RedesNeurais\s2\imageRN.ipynb  readme.md  scrpit.md  test.py  web1.0.ipynb
130/131/: for.py
130/133/: def.py
131/: 001.py  decimais.py  for.py  if.py  quadrado.py  test.py  test2.py
132/: busca.py  lista2.py
161/: api.py  api2.py  pip.py
420/IA/: a.txt
420/RE/: d.r
ALURA/Agile/: agile.md  scrum.md
ALURA/BI/: .datawarehouse.md.swo  datawarehouse.md  etl_part1.md  (+1 more)
CTWP/: a.py  b.py  c.py
FIAP/: test.py
FIAP/ML/TimeSeries/: TimeSeries_I.ipynb  pyproject.toml
FIAP/ML/TimeSeries/Aula_08/: TimeSeries_parte2.ipynb  pyproject.toml
FIAP/ML/TimeSeries/Aula_09/: Series_Temporais_Prophet.ipynb  pyproject.toml
FIAP/ML/TimeSeries/Aula_20230811/: Clusterizacao_ImdbMovies_Alunos.ipynb
FIAP/ML/TimeSeries/Aula_20230818/raw_data/: top250_movies_20230818.csv
OREILLY/TimeSeries/Ch02/: donations.ipynb  pyproject.toml
P/: .eisenhower.md.swo  db.json  eisenhower.md  financ.py  knd.omp.json  test.py  time.py
POLI/: Pipfile  pyproject.toml
POLI/DL/: A1_Metodos_regularização.ipynb
POLI/ESTAT/02.04/: IAD_001_Y2024_L06.ipynb  Pipfile  dp.py  ex.py  exercicios.md
POLI/ESTAT/05.03/: pyproject.toml
POLI/ESTAT/09.04/: code.py
POLI/ESTAT/12.03/: IAD_001_Y2024_L03.ipynb  ata.md
POLI/ESTAT/16.04/: IAD_001_Y2024_L08.ipynb
POLI/ESTAT/26.03/: Pipfile
POLI/ESTAT/26.03/exercicio/: code.ipynb
POLI/ESTAT/27.02/: ata.md
POLI/Estat/02.04/: IAD_001_Y2024_L06.ipynb  exercicios.md
POLI/Estat/05.03/: .ata.md.un~  IAD_001_Y2024_L02.ipynb  ata.md
POLI/Estat/09.04/: IAD_001_Y2024_L07.ipynb
POLI/Estat/12.03/: .ata.md.un~  IAD_001_Y2024_L03.ipynb
POLI/Estat/19.03/: IAD_001_Y2024_L04.ipynb  ata.md  pyproject.toml
POLI/Estat/19.03/exerc/: pyproject.toml  resolucao.ipynb  test_resolucao.ipynb
POLI/Estat/26.03/: IAD_001_Y2024_L05.ipynb
POLI/Estat/26.03/exercicio/: code.ipynb
POLI/Estat/27.02/: .ata.md.un~  ata.md
POLI/Estat/30.04/: IAD_001_Y2024_L10.ipynb
POLI/ML/05.07/: IAD_004_Y2024_01.ipynb
POLI/ML/05.14/: PECE_AP1_Exercícios_Regressão_Linear_2024(1).ipynb
POLI/ML/05.28/: PECE_AP1_Exercicios_regressão_logistica_2024.ipynb
POLI/ML/06.05/: IAD_004_Y2024_05.ipynb
POLI/ML/06.11/: PECE_AP1_Exercicios_SVM_2024.ipynb
POLI/ML/06.18/: IAD_004_Y2024_07.ipynb
POLI/ML/07.05/: IAD_004_Y2024_01.ipynb
POLI/ML/14.05/: PECE_AP1_Exercícios_Regressão_Linear_2024(1).ipynb
POLI/ML/PROJ/: ThisIsMePCASVM.ipynb  pyproject.toml  teste.ipynb
POLI/ML2/09.05/: exercícios_som.ipynb
POLI/ML2/10.08/: ex_aula_8_autoencoders_matias.ipynb
POLI/NLP/: pyproject.toml
POLI/NLP/02.18/: PECE_2025_Pré_Processamento.ipynb
POLI/PYTHON/02.29/: ata.md
POLI/PYTHON/02.29/code/: python.py
POLI/PYTHON/03.14/: pyproject.toml
POLI/PYTHON/03.28/: PECE_AI_Python_2024_Exercicios_oo_1.ipynb
POLI/PYTHON/04.11/: PECE_AI_Python_2024_Exercicios_Funcional.ipynb
POLI/PYTHON/04.25/cursoai_exercicios/pacote03/: modulo01.py
POLI/PYTHON/05.02/: PECE_AI_Python_2024_Exercicios_Arquivos_http_json.ipynb
POLI/PYTHON/05.16/: PECE_AI_Python_2024_Exercicios_numpy.ipynb  PECE_AI_Python_2024_Exercicios_regexp_csv_xml.ipynb
POLI/PYTHON/05.26/: PECE_AI_Python_Exercícios_de_Pandas_2024.ipynb
POLI/PYTHON/07.03/: .ata.md.un~  ata.md
POLI/PYTHON/11.04/: PECE_AI_Python_2024_Exercicios_Funcional.ipynb
POLI/PYTHON/14.03/: matias_lista1.ipynb
POLI/PYTHON/25.04/: PECE_AI_Python_2024_Exercicios_Modulos.ipynb
POLI/PYTHON/25.04/cursoai_exercicios/: meu_modulo.py
POLI/PYTHON/28.03/: PECE_AI_Python_2024_Exercicios_oo_1.ipynb
POLI/PYTHON/29.02/: .ata.md.un~
POLI/PYTHON/29.02/code/: code.ipynb  pyproject.toml
POLI/RN/08.01/: T1_Classificacao_binaria_RNA_rasa.ipynb
POLI/RN/08.15/T2_Classificação_binaria_keras/: Pipfile  T2_Classificação_binaria_keras.ipynb
POLI/RN/08.26/: T3_Ajuste_funcao.ipynb
POLI/ST/10.08/: Series_temporais_aula2.ipynb
PROJ/: 001.py  codeswap.py
RE/: a.r  b.r  c.r
(+567 files in other folders)
