[tool.poetry]
name = "poli"
version = "0.1.0"
description = ""
authors = ["Matias Herklotz <101160508+KndHvH@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
