[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["kndhvh <delend89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
seaborn = "^0.12.2"
statsmodels = "^0.14.0"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
