[tool.poetry]
name = "ch02"
version = "0.1.0"
description = ""
authors = ["kndhvh <delend89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.1"
ipython = "^8.15.0"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
