[tool.poetry]
name = "05-03"
version = "0.1.0"
description = ""
authors = ["Matias Herklotz <matias.herklotz@globalhitss.com.br>"]
readme = "README.md"
packages = [{include = "05"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
