[tool.poetry]
name = "proj"
version = "0.1.0"
description = ""
authors = ["Matias Herklotz <matias.herklotz@globalhitss.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^10.4.0"
html5lib = "^1.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.1"
numpy = "^2.0.0"
ipython = "^8.26.0"
scikit-learn = "^1.5.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
