[tool.poetry]
name = "14-03"
version = "0.1.0"
description = ""
authors = ["Matias Herklotz <matias.herklotz@globalhitss.com.br>"]
readme = "README.md"
packages = [{include = "14"}]

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
